tests/netconvert/import/XML/errors/broken_edge/edge#type__false1/options.netconvert
--edge-files=input_edges.edg.xml --node-files=input_nodes.nod.xml --output=net.net.xml --ignore-errors.edge-type false
